--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@siqing/drag",
-  "version": "1.0.0",
+  "name": "drag-utils-simple",
+  "version": "1.0.1",
   "description": "让元素支持拖拽移动",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
