--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drag-utils-simple",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "让元素支持拖拽移动",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -23,6 +23,7 @@
   "keywords": [
     "drag",
     "move",
+    "touch",
     "element",
     "dom"
   ],
